/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax="proto3";

package com.dremio.service.reindexer.proto;

option java_package = "com.dremio.service.reindexer.proto";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "ReIndexer";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

/*
 * Captures version information for a collection
 */
message ReindexVersionInfo {
  string collection_name = 1;
  int32 version = 2;
  int32 progress = 3;
  google.protobuf.Timestamp datetime = 4;
  STATUS status = 5;
  google.protobuf.Any checkpoint_info = 6;
}

enum STATUS {
  INPROGRESS = 0;
  COMPLETED = 1;
  FAILED = 2;
}

message CheckpointInfo {
  string doc_id = 1;
}

